[project]
name = "cdp-use-jrpa"
version = "1.4.4"
description = "Type safe generator/client library for CDP"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "websockets>=15.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "build>=1.2.2.post1",
    "ruff>=0.12.2",
]

[tool.hatch.build]
include = [
    "cdp_use/**/*.py"
]
exclude = [
    "cdp_use/generator/*.py"
]
